# SnickerBureau

./: .gitignore  README.md  config.py  docker-compose.yaml  presenter.py  pyproject.toml  requirements.txt  run.py
src/: config.py  database.py  main.py  models.py
src/api/v1/: routers.py
