[tool.poetry]
name = "snickerbureau"
version = "0.1.0"
description = ""
authors = ["pinigun <72judo72@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pytest = "^8.3.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqladmin = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
